# fermy-todo

./: Cargo.toml  go.mod  migration.sql  runtime_config.toml  spin.toml
src/: lib.rs
