[package]
name = "fermy-todo"
authors = ["Vincenzo Marcella <me@vincenzomarcella.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1.5.0"
http = "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_qs = "0.12.0"
spin-sdk = "2.2.0"
time = { version = "0.3.34", features = ["serde-human-readable"] }

[workspace]
